fix: add new sittings for docker connection

--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,6 +1,6 @@
 username=postgres
-password=123
-url=jdbc:postgresql://localhost:5432/1234
+password=postgres
+url=jdbc:postgresql://localhost:5431/postgres
 driver=org.postgresql.Driver
 classpath=postgresql-42.2.22.jar
 changeLogFile=master.xml
